tests/baselines/reference/contextualTypingOfArrayLiterals1.errors.txt
tests/cases/compiler/contextualTypingOfArrayLiterals1.ts(5,26): error TS2322: Type 'number' is not assignable to type 'Date'.


==== tests/cases/compiler/contextualTypingOfArrayLiterals1.ts (1 errors) ====
    interface I {
       [x: number]: Date;
    }
    
    var x3: I = [new Date(), 1]; 
                             ~
!!! error TS2322: Type 'number' is not assignable to type '{|Date|0|}'.
!!! related TS6501 tests/cases/compiler/contextualTypingOfArrayLiterals1.ts:2:4: The expected type comes from this index signature.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:729:11
    var r2 = x3[1]; 
    r2.getDate(); 
    